--- a/client/index.html
+++ b/client/index.html
@@ -24,10 +24,18 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/index.min.css"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <title>Amazon-Qoo10</title>
   </head>
   <body>
-    <noscript>このアプリを実行するには JavaScript を有効にする必要があります.</noscript>
+    <noscript
+      >このアプリを実行するには JavaScript を有効にする必要があります.</noscript
+    >
     <div id="root"></div>
     <script
       type="module"
